# egg-mode-text

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  TODO.md  appveyor.yml
src/: lib.rs  regexen.rs  validate.yml
