[package]
name = "egg-mode-text"
version = "1.15.1"
authors = ["QuietMisdreavus <grey@quietmisdreavus.net>"]
description = "Text parsing for Twitter: character counting, hashtag/mention extraction"
documentation = "https://docs.rs/egg-mode-text"
repository = "https://github.com/egg-mode-rs/egg-mode-text"
keywords = ["twitter"]
categories = ["text-processing"]
license = "MPL-2.0"
readme = "README.md"

[badges]
travis-ci = { repository = "egg-mode-rs/egg-mode-text" }
appveyor = { repository = "egg-mode-rs/egg-mode-text" }

[dependencies]
regex = "1.4"
lazy_static = "1.4"
unicode-normalization = "0.1.15"

[dev-dependencies]
yaml-rust = "0.4.4"
